Revert "Added admin toolkit, ExAd and first AI"
This reverts commit ff864e54247032da806ead682e761351b7485eea.

--- a/docker-compose-malden.yml
+++ b/docker-compose-malden.yml
@@ -10,10 +10,11 @@ services:
       - "2304:2304/udp"
       - "2305:2305/udp"
     environment:
+      - EXILE_CONFIG_MISSION=Exile.Malden
       - EXILE_DATABASE_HOST=database
-      - EXILE_DATABASE_NAME=altisdb
-      - EXILE_DATABASE_USER=altisu
-      - EXILE_DATABASE_PASS=altispw
+      - EXILE_DATABASE_NAME=maldendb
+      - EXILE_DATABASE_USER=maldenu
+      - EXILE_DATABASE_PASS=maldenpw
       - EXILE_CONFIG_PASSWORD_COMMAND=jrcnlHB9xwqVlVueLlT6
     volumes:
       - /shares/admintoolkit_servercfg.pbo:/opt/arma3/@AdminToolkitServer/addons/admintoolkit_servercfg.pbo
