Added initial config files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - ATK_CONFIG_ADMIN_LIST=76561197990024201,76561198007339024
     volumes:
       - /mnt/shares/logs:/opt/arma3/@ExileServer/extDB/logs/
+      - /mnt/shares/configs:/home/steamu/configs
     links:
         - "arma-3-exile-database:database"
   arma-3-exile-database:
