Added headless client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: "hasable/arma3-black-company"
     container_name: "arma-3-black-company"
     depends_on: 
-        - arma-3-exile-database
+        - arma-3-database
     ports:
       - "2302:2302/udp" 
       - "2303:2303/udp" 
@@ -13,25 +13,51 @@ services:
       - "2306:2306/udp"
       - "2309:2309/udp"
     environment:
-      - EXILE_CONFIG_HOSTNAME=[FR] Black Company DEV
+      - EXILE_CONFIG_HOSTNAME=Exile+mods+bots DEV
       - EXILE_DATABASE_HOST=database
       - EXILE_DATABASE_NAME=altisdb
       - EXILE_DATABASE_USER=altisu
       - EXILE_DATABASE_PASS=altispw
       - ATK_CONFIG_ADMIN_LIST=76561197990024201,76561198007339024
-      - CONFIG=/home/steamu/config
+      - HC_LIST=hc0
     volumes:
       - /mnt/shares/logs:/opt/arma3/@ExileServer/extDB/logs/
       - /mnt/shares/config:/home/steamu/config
-    links:
-        - "arma-3-exile-database:database"
-  arma-3-exile-database:
+    networks:
+      armanet:
+        aliases:
+          - arma-3-bots-master
+          - master
+
+  arma-3-bots-hc0:
+    image: "hasable/arma3-bots"
+    container_name: "arma-3-bots-hc0"
+    environment:
+      - HC_SERVER=master
+    entrypoint: 
+      - /usr/local/bin/docker-entrypoint-hc
+    command: -mod=@Exile;@A3XAI_HC;@CBA_A3;@CUPWeapons;@CUPUnits;@CUPVehicles;@R3FArmes;@R3FUnites -name=HC0
+    networks:
+      armanet:
+        aliases:
+          - arma-3-bots-hc0
+          - hc0
+          
+  arma-3-database:
     image: "mysql/mysql-server:5.7.19-1.1.1"
-    container_name: "arma-3-exile-database"
+    container_name: "arma-3-database"
     volumes:
       - database-content:/var/lib/mysql
       - /mnt/shares/mysql/logs:/var/log
     command: "--sql-mode=ONLY_FULL_GROUP_BY,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+    networks:
+      armanet:
+        aliases:
+          - database
+
+networks:
+    armanet:          
+          
 volumes:
     database-content:
         external:
